--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -14,9 +14,10 @@ global
     cpu-map 2 1
     cpu-map 3 2
     cpu-map 4 3
-    ulimit-n 1000000
-    maxconn  3000000
-
+    ulimit-n 6000000
+    maxconn  6000000
+	stats bind-process 1
+	
 	# Default SSL material locations
 	ca-base /etc/ssl/certs
 	crt-base /etc/ssl/private
