--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -14,8 +14,8 @@ global
     cpu-map 2 1
     cpu-map 3 2
     cpu-map 4 3
-    ulimit-n 6000000
-    maxconn  3000000
+    #ulimit-n 6000000
+    #maxconn  3000000
 	stats bind-process 1
 	
 	# Default SSL material locations
